--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <title>Login</title>
+  <title>Sign Up</title>
 </head>
 <body class="vh-100">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,11 +24,13 @@
     </ul>
   </nav>
   <div class="container h-75 d-flex justify-content-center align-items-center text-center">
-    <form action="{{ url_for('login') }}" method="POST">
-      <h3 class="font-weight-bold mb-3">Let's Login!</h3>
+    <form action="{{ url_for('register') }}" method="POST">
+      <h3 class="font-weight-bold mb-3">Go Sign Up!</h3>
+      <input type="text" class="form-control my-3" name="firstname" placeholder="First Name">
+      <input type="text" class="form-control my-3" name="lastname" placeholder="Last Name">
       <input type="email" class="form-control my-3" name="email" placeholder="Email">
       <input type="password" class="form-control my-3" name="password" placeholder="Password">
-      <button class="btn btn-md btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-md btn-primary btn-block" type="submit">Sign Up</button>
     </form>
   </div>
 </body>
