--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 
 {% block content %}
   <div class="container mt-5 d-flex justify-content-center align-items-center text-center">
-    <form action="{{ url_for('register') }}" method="POST">
+    <form action="{{ url_for('auth.register') }}" method="POST">
       <h3 class="font-weight-bold mb-3">Go Sign Up!</h3>
       <input type="text" class="form-control my-3" name="firstname" placeholder="First Name">
       <input type="text" class="form-control my-3" name="lastname" placeholder="Last Name">
