--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,10 +4,10 @@
 {% block menu %}
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="/">Login</a>
+      <a class="nav-link" href="{{ url_for('auth.signin') }}">Login</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('signup') }}">Register</a>
+      <a class="nav-link" href="{{ url_for('auth.signup') }}">Register</a>
     </li>
   </ul>
 {% endblock %}
