--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,16 +1,7 @@
 {% extends "base.html" %}
-{% block title %} Home {% endblock %}
+{% set active_page = "login" %}
 
-{% block menu %}
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.signin') }}">Login</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.signup') }}">Register</a>
-    </li>
-  </ul>
-{% endblock %}
+{% block title %} Login {% endblock %}
 
 {% block content %}
   {% with messages = get_flashed_messages(with_categories=True) %}
