--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,16 +1,7 @@
 {% extends "base.html" %}
-{% block title %} Home {% endblock %}
+{% set active_page = "signup" %}
 
-{% block menu %}
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.signin') }}">Login</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.signup') }}">Register</a>
-    </li>
-  </ul>
-{% endblock %}
+{% block title %} Sign Up {% endblock %}
 
 {% block content %}
   <div class="container mt-5 d-flex justify-content-center align-items-center text-center">
