refactor: change folder and file name

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <h2 class="font-weight-bold">Librari</h2>
     </a>
     {% set navbar = [
-      ('auth.signin', 'login', 'Login'),
+      ('auth.index', 'login', 'Login'),
       ('auth.signup', 'signup', 'Sign Up'),
     ] -%}
 
